Deepika: Fix UI layout issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,6 +88,10 @@
   height: 3rem;
 }
 
-:root {
+#root {
   width: -webkit-fill-available;
+}
+
+.metrics-dashboard {
+  margin-bottom: inherit;
 }
